# rag-rbac-ai-assistant

./: README.md  config.py  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py  schemas.py
app/auth/: auth.py  roles.py
app/db/: vectorstore.py
app/llm/: groq_client.py
app/rag/: ingest.py  pipeline.py  retriever.py  test_pipeline.py  test_retriever.py
data/finance/: report.txt
data/general/: faq.txt
data/hr/: policy.txt
db/: chroma.sqlite3
frontend/: app.py
